# garmin-connect-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  example.py  generate_token.py  pyproject.toml  render.yaml
.github/workflows/: deploy.yml
src/garmin_mcp/: __init__.py  __main__.py  activity_management.py  auth_cli.py  gear_management.py  github_oauth_provider.py  health_wellness.py  nutrition.py  token_utils.py  training.py  workout_templates.py  workouts.py
tests/: conftest.py
tests/fixtures/: garmin_responses.py
tests/integration/: test_activity_management_tools.py  test_challenges_tools.py  test_health_wellness_tools.py  test_nutrition_tools.py  test_other_modules_tools.py  test_training_tools.py  test_workouts_tools.py
tests/unit/: test_auth_cli.py
