[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-health-sync"
version = "0.1.0"
description = "MCP server to access Garmin data"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv==1.0.1",
    "garminconnect>=0.3.2",
    "curl_cffi>=0.7.0",
    "requests==2.32.4",
    "mcp>=1.23.0",
    "garth>=0.5.17,<0.6.0",
    "httpx>=0.27.0",
]

[project.scripts]
garmin-mcp = "garmin_mcp:main"
garmin-mcp-auth = "garmin_mcp.auth_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_mcp"]
