[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-connect-mcp"
version = "0.1.0"
description = "MCP server to access Garmin data"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv==1.0.1",
    "garminconnect>=0.3.2",
    "curl_cffi>=0.7.0",
    "requests==2.32.4",
    "mcp>=1.23.0",
    "starlette>=1.0.1",
    "httpx>=0.27.0",
]

[project.scripts]
garmin-mcp = "garmin_mcp:main"
garmin-mcp-auth = "garmin_mcp.auth_cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_mcp"]
